# MQSS-QDMI-Devices-Suite

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  annotated.html  classes.html  dcdb_8cpp.html  dcdb_8cpp.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_7e78a70a09d02b06ff3c3fbb7e229684.html  dir_7e78a70a09d02b06ff3c3fbb7e229684.js  dir_bb39ea59592983ec6ae19f64f49b4f72.html  dir_bb39ea59592983ec6ae19f64f49b4f72.js  dir_e6c180d38bec9547b4cf4c21ab3dbb02.html  dir_e6c180d38bec9547b4cf4c21ab3dbb02.js  dir_f6bdf58d0ea93f30e68104fcda8ae75b.html  dir_f6bdf58d0ea93f30e68104fcda8ae75b.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  md_docs_2development.html  md_docs_2faq.html  md_docs_2implementations.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  qaptiva_8c.html  qaptiva_8c.js  qaptiva__auxiliary_8py.html  (+26 more)
.devcontainer/: DockerFile  Dockerfile  devcontainer.json  post_create_commands.sh
cmake/: ExternalDependencies.cmake  Findcjson.cmake  Findmqss_client.cmake  Findqdmi.cmake  Findqinfo.cmake
docs/: CMakeLists.txt  Doxyfile.in  development.md  devices.md  header.html  implementations.md  index.md  layout.xml  style.css
include/: ibm.h  wmi_real.h  wmi_sim.h
include/ibm/: ibm.h
search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  pages_2.js  (+15 more)
src/: CMakeLists.txt  ibm.c  qdmi_backend_wmi_sim.c  wmi_real.c  wmi_sim.c
src/aqt/: CMakeLists.txt  aqt.c  aqt.py
src/databases/: CMakeLists.txt
src/databases/dcdb/: CMakeLists.txt  dcdb.cpp  sensors.cpp  sensors.h  session.cpp  session.h
src/datacenters/: CMakeLists.txt
src/datacenters/lrz/: CMakeLists.txt  common.h  job.h  lrz.c  lrz.cpp  session.h
src/datacenters/wmi/: CMakeLists.txt  wmi.c  wmi_auxiliary.py
src/dcdb/: CMakeLists.txt  dcdb.cpp  sensors.cpp  sensors.h  session.cpp  session.h
src/ibm/: CMakeLists.txt  ibm.c
src/isv/: CMakeLists.txt
src/isv/parityqc/: CMakeLists.txt  LICENSE.txt  parityos.cpp  parityos_wrapper.py
src/lrz/: CMakeLists.txt  lrz.c
src/qaptiva/: CMakeLists.txt  a.out  iqm.c  qaptiva.c  qaptiva_auxiliary.py  qaptivav1.c  qdmi2qaptiva.py  qdmiv12qaptiva.py  thread.c
src/qlm/: CMakeLists.txt  qlm.c  qlm_auxiliary.py
src/simulators/: CMakeLists.txt
src/simulators/eviden/: CMakeLists.txt  qaptiva.c  qaptiva_auxiliary.py
src/wmi/: CMakeLists.txt
src/wmi/real/: CMakeLists.txt  wmi_real.c
src/wmi/sim/: CMakeLists.txt  wmi_sim.c
tests/: .qdmi-config  CMakeLists.txt  IBMBackendTest.c  WMIBackendTest.c  WMIRealBackendTest.c  test.py
tests/aqt/: AQTBackendTest.cpp  CMakeLists.txt
tests/databases/: CMakeLists.txt
tests/databases/dcdb/: CMakeLists.txt  DCDBBackendTest.cpp
tests/datacenters/: CMakeLists.txt
tests/datacenters/lrz/: CMakeLists.txt  LRZBackendTest.cpp  LRZBackendTest.cpp.bak
tests/datacenters/wmi/: CMakeLists.txt  WMIBackendTest.cpp
tests/datacenters/wmi/circuits/: circuit_bell.ll  circuit_excited.ll  circuit_ground.ll  circuit_hadamard_decomposed.ll
tests/dcdb/: CMakeLists.txt  DCDBBackendTest.cpp
tests/ibm/: CMakeLists.txt  IBMBackendTest.c  ibm_conf.json  ibm_prob.json
tests/inputs/: bell.qasm
tests/isv/: CMakeLists.txt
tests/isv/parityqc/: CMakeLists.txt  ParityOSDeviceTest.cpp  test_main.cpp
tests/lrz/: CMakeLists.txt  LRZBackendTest.cpp
tests/qaptiva/: CMakeLists.txt  QaptivaBackendTest.c  QaptivaBackendTest.cpp  test.sh
tests/qlm/: CMakeLists.txt  QLMBackendTest.cpp
tests/simulators/: CMakeLists.txt
tests/simulators/eviden/: CMakeLists.txt  QaptivaBackendTest.cpp  QaptivaNoisyBackendTest.cpp
tests/wmi/: CMakeLists.txt  WMIBackendTest.c
